simulation/client/clients.yaml
apiVersion: v1
kind: Service
metadata:
  name: client1
  namespace: clientns
  labels:
    app: client1
    service: client1
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: client1
---
apiVersion: v1
kind: Service
metadata:
  name: client2
  namespace: clientns
  labels:
    app: client2
    service: client2
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: client2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client1
  namespace: clientns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client1
      version: v1
  template:
    metadata:
      labels:
        app: client1
        version: v1
    spec:
      serviceAccountName: client1
      containers:
      - image: client/osltest
        imagePullPolicy: IfNotPresent
        name: client1
        ports:
        - containerPort: 9080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2
  namespace: clientns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client2
      version: v1
  template:
    metadata:
      labels:
        app: client2
        version: v1
    spec:
      serviceAccountName: client2
      containers:
      - image: client/osltest
        imagePullPolicy: IfNotPresent
        name: client2
        ports:
        - containerPort: 9080
