simulation/client/istio.yaml
apiVersion: networking.istio.io/v1beta
kind: DestinationRule
metadata:
  name: outbound-mtls
  namespace: clientns
spec:
  host: "*.api-istio.svc.cluster.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: client-gateway
  namespace: clientns
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - '*'
    #- client1.clientns.svc.cluster.local
    #- client2.clientns.svc.cluster.local

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: client1
  namespace: clientns
spec:
  hosts:
  #- '*'
  - client1.clientns.svc.cluster.local
  gateways:
  - client1-gateway
  http:
  - name: "client1 route"
    match:
    - uri:
        prefix: /client1
    route:
    - destination:
        host: client1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: client2
  namespace: clientns
spec:
  hosts:
  - client2.clientns.svc.cluster.local
  gateways:
  - client1-gateway
  http:
  - name: "client2 route"
    match:
    - uri:
        prefix: /client2
    route:
    - destination:
        host: client2
