simulation/client/nonistio.yaml
apiVersion: v1
kind: Service
metadata:
  name: nonistio1
  namespace: nonistio
  labels:
    app: nonistio1
    service: nonistio1
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9080
  selector:
    app: nonistio1
---
apiVersion: v1
kind: Service
metadata:
  name: nonistio2
  namespace: nonistio
  labels:
    app: nonistio2
    service: nonistio2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9080
  selector:
    app: nonistio2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nonistio1
  namespace: nonistio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nonistio1
      version: v1
  template:
    metadata:
      labels:
        app: nonistio1
        version: v1
    spec:
      serviceAccountName: nonistio1
      containers:
        - image: client/osltest
          imagePullPolicy: IfNotPresent
          name: nonistio1
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nonistio2
  namespace: nonistio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nonistio2
      version: v1
  template:
    metadata:
      labels:
        app: nonistio2
        version: v1
    spec:
      serviceAccountName: nonistio2
      containers:
        - image: client/osltest
          imagePullPolicy: IfNotPresent
          name: nonistio2
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: outbound-mtls
  namespace: clientns
spec:
  host: "api.example.com"
  exportTo:
    - "."
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: api
  namespace: clientns
spec:
  hosts:
    - api.example.com
  location: MESH_INTERNAL
  addresses:
    - 10.110.12.8
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nonistio-gateway
  namespace: nonistio
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - nonistio1.example.com
        - nonistio2.example.com
        - nonistio1.nonistio.svc.cluster.local
        - nonistio2.nonistio.svc.cluster.local

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nonistio1
  namespace: nonistio
spec:
  hosts:
    - nonistio1.example.com
  gateways:
    - nonistio-gateway
  http:
    - name: "nonistio1 route"
      match:
        - uri:
            prefix: /nonistio1
        - uri:
            exact: /
      route:
        - destination:
            host: nonistio1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nonistio2
  namespace: nonistio
spec:
  hosts:
    - nonistio2.example.com
  gateways:
    - nonistio-gateway
  http:
    - name: "nonistio2 route"
      match:
        - uri:
            prefix: /nonistio2
      route:
        - destination:
            host: nonistio2
